programming-tehniques/ZSR3/Z2/.gcc.out
/rhome/m/mucanbarli1/workspace/TP/ZSR3/Z2/main.cpp: In function ‘int main()’:
/rhome/m/mucanbarli1/workspace/TP/ZSR3/Z2/main.cpp:7:10: error: ‘any’ is not a member of ‘std’
     std::any a;
          ^~~
